--- a/Project/Home.html
+++ b/Project/Home.html
@@ -49,11 +49,11 @@
                                 <form class="form-horizontal" id="buyerLoginForm">
                                     <div class="form-group">
                                         <label for="usernameA" class="control-label">User Name</label>
-                                        <input class="form-control" type="text" name="usernameB" id="usernameB" aria-describedby="basic-addon1" placeholder="Username">
+                                        <input class="form-control" type="text" name="usernameA" id="usernameA" aria-describedby="basic-addon1" placeholder="Username">
                                     </div>
                                     <div class="form-group">
                                         <label for="passwordA" class="control-label">Password</label>
-                                        <input class="form-control" type="password" name="passwordB" id="passwordB" aria-describedby="basic-addon1" placeholder="Password">
+                                        <input class="form-control" type="password" name="passwordA" id="passwordA" aria-describedby="basic-addon1" placeholder="Password">
                                     </div>
                                 </form>
                             </div>
